--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "News Manager",
+	"name": "Snews News Manager",
 	"description": "A quick-way to browse headlines and stories from your favorite news sources without leaving what you're doing.",
-	"version": "1.0.5",
+	"version": "2.0.0",
 
 	"permissions": [
 		"activeTab",
@@ -11,17 +11,20 @@
 	],
 
 	"options_page": "settings.html",
-
-	"browser_action": {
-		"default_icon": "assets/icon48.png",
-		"default_title": "News Manager",
-		"default_popup": "feed.html"
-	},
+	"action": {
+    "default_icon": {              
+      "16": "assets/icon16.png", 
+      "24": "assets/icon24.png",
+      "32": "assets/icon32.png"
+    },
+    "default_title": "Snews News Manager",
+    "default_popup": "feed.html"
+  },
 	
 	"icons": {
 			"128": "assets/icon128.png",
 			"48": "assets/icon48.png"
 	},
 
-	"manifest_version": 2
+	"manifest_version": 3
 }
